# mitziwm

./: .clangd  .gitingore  CMakeLists.txt  README.md  resource.h  resources.rc  resources.rc.in
src/: main.cpp  window.cpp  window.h
src/config/: config.cpp  config.h
src/tray/: hotkey_dialog.cpp  hotkey_dialog.h  tray.cpp  tray.h
src/window/: gestures.cpp  gestures.h  overlay.cpp  overlay.h  snapping.cpp  snapping.h
